# thw-stempelkarten

./: Cargo.toml  LICENSE-MIT  README.md
examples/volunteers/: Erika_Mustermann.toml  Leon_Mustermann.toml  Max_Mustermann.toml
src/: main.rs  template.rs  volunteers.rs
template/: template.typ  utils.typ
