[package]
name = "thw-stempelkarten"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
glob = "0.3.3"
log = "0.4.28"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.8"
typst = "0.14.0"
typst-as-lib = { version = "0.15.0", features = [
    "typst-kit-fonts",
    "packages",
] }
typst-pdf = "0.14.0"
